<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:context=".generalActivities.MainActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_black"
                android:text="Smart-Beds"
                android:textColor="@android:color/white"
                android:textSize="45dp" />

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                card_view:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="30dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="Inicia sesión"
                        android:textColor="@android:color/black"
                        android:textSize="30dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="16dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/roboto"
                        android:text="Nombre de usuario"
                        android:textSize="18dp" />

                    <EditText
                        android:id="@+id/input_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginBottom="16dp"
                        android:inputType="textPersonName"
                        android:text="" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="16dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/roboto"
                        android:text="Contraseña"
                        android:textSize="18dp" />

                    <EditText
                        android:id="@+id/input_contrasena"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginBottom="16dp"
                        android:inputType="textPassword"
                        android:text="" />

                    <Button
                        android:id="@+id/boton_iniciarSesion"
                        android:layout_width="wrap_content"
                        android:layout_height="52dp"
                        android:layout_marginBottom="16dp"
                        android:background="@color/colorPrimaryLight"
                        android:fontFamily="@font/roboto_medium"
                        android:onClick="iniciarSesion"
                        android:paddingHorizontal="16dp"
                        android:text="Iniciar Sesión"
                        android:textSize="20dp" />


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/main_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="200dp"/>

    </RelativeLayout>
</ScrollView>