<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/user_add_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_back"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center_vertical"
                    android:onClick="back"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:paddingVertical="18dp"
                    android:paddingLeft="8dp"
                    android:text="Acerca de SmartBeds"
                    android:textColor="@android:color/white"
                    android:textSize="24dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="18dp"
                android:breakStrategy="high_quality"
                android:fontFamily="@font/roboto_medium"/>

            <TextView
                android:id="@+id/about_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="18dp"
                android:breakStrategy="high_quality"
                android:fontFamily="@font/roboto_medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginVertical="8dp"
                android:textSize="24dp"
                android:text="Código fuente"
                android:fontFamily="@font/roboto_bold"/>

            <TextView
                android:id="@+id/about_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="18dp"
                android:breakStrategy="high_quality"
                android:fontFamily="@font/roboto_medium"
                android:autoLink="web"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginVertical="8dp"
                android:textSize="24dp"
                android:text="Bibliotecas"
                android:fontFamily="@font/roboto_bold"/>

            <TextView
                android:id="@+id/about_text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="18dp"
                android:breakStrategy="high_quality"
                android:fontFamily="@font/roboto_medium"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>