...
                android:layout_height="match_parent"
                android:background="@color/background"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/beds_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="?attr/colorPrimary"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme">
...
                    android:paddingVertical="8dp"
                    android:paddingHorizontal="16dp"
                    android:fontFamily="@font/roboto_medium"
                    android:visibility="gone"/>

                <ListView
                    android:id="@+id/beds_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="4dp"
                    android:divider="@color/background"
                    android:dividerHeight="8dp"></ListView>
...
